--- a/css/style.css
+++ b/css/style.css
@@ -11,6 +11,14 @@ img {
   margin: 0% auto;
   max-width: 1320px;
 }
+
+.gradiente {
+  background-image: linear-gradient(to right, grey, white);
+}
+
+.gradiente2 {
+  background-image: linear-gradient(to bottom, black, blue);
+}
 a {
   text-decoration: none;
   color: white;
@@ -35,7 +43,7 @@ h2 {
   left: 40%;
   height: 10rem;
   width: 19rem;
-  color: blue;
+  color: white;
   text-align: center;
 }
 body {
@@ -60,6 +68,11 @@ header {
 ul li {
   color: white;
   padding: 0.5rem 5rem 0.5rem 5rem;
+  transition: 2s;
+}
+
+li:hover {
+  transform: scale(1.5, 1.5);
 }
 .ModTexto {
   padding: 10rem;
@@ -72,7 +85,7 @@ ul li {
 
 .container-grid {
   display: grid;
-  grid-template-columns: 100px;
+  grid-template-columns: repeat(3, 1fr);
   grid-auto-rows: auto;
   grid-row-gap: 10px;
   grid-column-gap: 10px;
